syntax = "proto3";

package envoy.extensions.transport_sockets.tap.v3;

import "envoy/config/core/v3/base.proto";
import "envoy/extensions/common/tap/v3/common.proto";

import "google/protobuf/wrappers.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.transport_sockets.tap.v3";
option java_outer_classname = "TapProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/transport_sockets/tap/v3;tapv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Tap]
// [#extension: envoy.transport_sockets.tap]

// Configuration for tap transport socket. This wraps another transport socket, providing the
// ability to interpose and record in plain text any traffic that is surfaced to Envoy.
message Tap {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.transport_socket.tap.v2alpha.Tap";

  // Common configuration for the tap transport socket.
  common.tap.v3.CommonExtensionConfig common_config = 1
      [(validate.rules).message = {required: true}];

  // The underlying transport socket being wrapped.
  config.core.v3.TransportSocket transport_socket = 2 [(validate.rules).message = {required: true}];

  // Additional configurations for the transport socket tap
  SocketTapConfig socket_tap_config = 3;
}

// Additional configurations for the transport socket tap
message SocketTapConfig {
  // Indicates to whether output the connection information per event
  // This is only applicable if the streamed trace is enabled
  bool set_connection_per_event = 1;

  // The contents of the transport tap's statistics prefix.
  string stats_prefix = 2;

  // For buffer tracing, tapped messages are sent only on connection closure by default.
  // This is suitable for HTTP/1 but not for HTTP/2.
  // Tapped messages are sent based on the min_buffered_bytes threshold
  // If the min_buffered_bytes is specified, the min value is 9 bytes (min HTTP/2 frame size).
  // This is only applicable if the buffer trace is enabled.
  google.protobuf.UInt32Value min_buffered_bytes = 3;
}
